--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         uses: docker://thehiveproject/cortex-neurons-builder:latest
         with:
           args: |
-            --namespace cortexneurons --path analyzers --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --registry_harbor ${{ secrets.REGISTRY_HARBOR }} ${{ (github.event.name == 'tag' || github.event.name == 'schedule') && '--stable' || '' }}
+            --namespace cortexneurons --path analyzers --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --registry_harbor ${{ secrets.REGISTRY_HARBOR }} ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
 
   build_responders:
     name: Build Responders
@@ -38,7 +38,7 @@ jobs:
         uses: docker://thehiveproject/cortex-neurons-builder:latest
         with:
           args: |
-            --namespace cortexneurons --path responders --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --registry_harbor ${{ secrets.REGISTRY_HARBOR }} ${{ (github.event.name == 'tag' || github.event.name == 'schedule') && '--stable' || '' }}
+            --namespace cortexneurons --path responders --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --registry_harbor ${{ secrets.REGISTRY_HARBOR }} ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
 
   build_catalog:
     name: Build Catalog
@@ -61,7 +61,7 @@ jobs:
             responders/responders.json
       - name: Make Release
         uses: softprops/action-gh-release@v1
-        if: github.event.name == 'tag'
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           generate_release_notes: true
           files: |
@@ -75,7 +75,7 @@ jobs:
     name: Build documentation
     runs-on: [ ubuntu-latest ]
     needs: [build_analyzers, build_responders ]
-    if: github.event.name == 'tag'
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v3
       - name: Prepare documentation files
