--- a/responders/CheckPoint/requirements.txt
+++ b/responders/CheckPoint/requirements.txt
@@ -1,2 +1,3 @@
 cortexutils
--e git+https://github.com/CheckPointSW/cp_mgmt_api_python_sdk#egg=cpapi cpapi
+# -e git+https://github.com/CheckPointSW/cp_mgmt_api_python_sdk#egg=cpapi cpapi
+git+https://github.com/CheckPointSW/cp_mgmt_api_python_sdk
