--- a/responders/Jupyter_Responder/Dockerfile
+++ b/responders/Jupyter_Responder/Dockerfile
@@ -1,19 +1,4 @@
-## To test an Analyzer of Responder with docker: 
-#
-# Copy this file in the folder of an analyzer or a responder and name it Dockerfile
-## edit it and Change variables
-#
-# - {workername} by the folder name of the analyzer or responder
-# - {command} by the value of the `command` in a JSON file
-# 
-# Save and run: 
-#
-# docker build -t cortexneurons/{flavor_name}:devel  with {flavor_name} the name of the analyzer of responder in the JSON file
-#
-# 
-
-
-
+# syntax=docker/dockerfile:1.3-labs
 FROM python:3.9
 WORKDIR /worker
 COPY . Jupyter_Responder
