#1214 GH Actions not working, update heredoc in dockerfile

--- a/analyzers/Jupyter_Analyzer/Dockerfile
+++ b/analyzers/Jupyter_Analyzer/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9
 WORKDIR /worker
 COPY . Jupyter_Analyzer
 RUN test ! -e Jupyter_Analyzer/requirements.txt || pip install --no-cache-dir -rJupyter_Analyzer/requirements.txt
-COPY <<-"EOT" /Jupyter_Analyzer/papermill_iorw.patch
+RUN cat  <<EOF >/Jupyter_Analyzer/papermill_iorw.patch
 --- iorw.py       2023-08-11 05:49:49.302149767 +0000
 +++ iorw.py     2023-08-11 05:48:38.553642098 +0000
 @@ -180,7 +180,7 @@
@@ -26,7 +26,9 @@ COPY <<-"EOT" /Jupyter_Analyzer/papermill_iorw.patch
          result.raise_for_status()
  
      @classmethod
-EOT
+EOF
+
+
 RUN pip install papermill
 RUN apt update
 RUN apt install patch
