--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,7 @@ jobs:
     name: Build Catalog
     runs-on: [ ubuntu-latest ]
     needs: [ build_analyzers, build_responders ]
+    if: always()
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -77,7 +78,7 @@ jobs:
     name: Build documentation
     runs-on: [ ubuntu-latest ]
     needs: [build_analyzers, build_responders ]
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') && always()
     steps:
       - uses: actions/checkout@v3
       - name: Prepare documentation files
