fix maltiverse build

--- a/analyzers/Maltiverse/Dockerfile
+++ b/analyzers/Maltiverse/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3-slim
 WORKDIR /worker
 COPY . Maltiverse
+RUN apt update && apt install -y git
 RUN test ! -e Maltiverse/requirements.txt || pip install --no-cache-dir -r Maltiverse/requirements.txt
 ENTRYPOINT Maltiverse/maltiverse-client.py
