--- a/analyzers/DomainToolsIris/requirements.txt
+++ b/analyzers/DomainToolsIris/requirements.txt
@@ -1,3 +1,2 @@
 cortexutils
-domaintools_api ; python_version < '3.5'
-git+https://github.com/DomainTools/python_api.git ; python_version >= '3.5'
+domaintools_api==0.6.2
