--- a/responders/CheckPoint/requirements.txt
+++ b/responders/CheckPoint/requirements.txt
@@ -1,3 +1,4 @@
 cortexutils
+cp-mgmt-api-sdk
 # -e git+https://github.com/CheckPointSW/cp_mgmt_api_python_sdk#egg=cpapi cpapi
-git+https://github.com/CheckPointSW/cp_mgmt_api_python_sdk
+#git+https://github.com/CheckPointSW/cp_mgmt_api_python_sdk
