--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,10 +42,10 @@ jobs:
           # Build JSON for responders
           responder_json=$(echo "$responder_dirs" | jq -R -s -c 'split("\n")[:-1] | map({directory: .})')
           
-          # Add a component key to each and wrap them with "include"
-          analyzers_matrix=$(echo "$analyzer_json" | jq -c '{include: map(. + {component: "analyzers"})}')
+          # Wrap them in an "include" object
+          analyzers_matrix=$(echo "$analyzer_json" | jq -c '{include: .}')
           responders_matrix=$(echo "$responder_json" | jq -c '{include: map(. + {component: "responders"})}')
-          
+
           echo "Generated analyzers matrix: $analyzers_matrix"
           echo "Generated responders matrix: $responders_matrix"
           
@@ -61,14 +61,13 @@ jobs:
             echo "EOF"
           } >> "$GITHUB_OUTPUT"
 
-  build_analyzers:
-    name: Build Analyzers
+  build_analyzers_amd64:
+    name: Build Analyzers (amd64)
     needs: generate-matrix
     runs-on: ubuntu-latest
     strategy:
       matrix:
         directory: ${{ fromJson(needs.generate-matrix.outputs.analyzers_matrix).include[*].directory }}
-        arch: [amd64, arm64]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -84,21 +83,49 @@ jobs:
       - name: Pre-pull builder image (if not already cached)
         run: docker pull thehiveproject/cortex-neurons-builder:latest
 
-      - name: Build analyzer ${{ matrix.directory }} for ${{ matrix.arch }}
+      - name: Build analyzer ${{ matrix.directory }} for amd64
         uses: docker://thehiveproject/cortex-neurons-builder:latest
         with:
           driver-opts: image=moby/buildkit:v0.19.0
           args: |
-            --namespace cortexneurons --path analyzers -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/${{ matrix.arch }} ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
+            --namespace cortexneurons --path analyzers -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/amd64 ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
 
-  build_responders:
-    name: Build Responders
+  build_analyzers_arm64:
+    name: Build Analyzers (arm64)
+    needs: generate-matrix
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        directory: ${{ fromJson(needs.generate-matrix.outputs.analyzers_matrix).include[*].directory }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Pre-pull builder image (if not already cached)
+        run: docker pull thehiveproject/cortex-neurons-builder:latest
+
+      - name: Build analyzer ${{ matrix.directory }} for arm64
+        uses: docker://thehiveproject/cortex-neurons-builder:latest
+        with:
+          driver-opts: image=moby/buildkit:v0.19.0
+          args: |
+            --namespace cortexneurons --path analyzers -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/arm64 ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
+
+  build_responders_amd64:
+    name: Build Responders (amd64)
     needs: generate-matrix
     runs-on: ubuntu-latest
     strategy:
       matrix:
         directory: ${{ fromJson(needs.generate-matrix.outputs.responders_matrix).include[*].directory }}
-        arch: [amd64, arm64]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -114,17 +141,46 @@ jobs:
       - name: Pre-pull builder image (if not already cached)
         run: docker pull thehiveproject/cortex-neurons-builder:latest
 
-      - name: Build responder ${{ matrix.directory }} for ${{ matrix.arch }}
+      - name: Build responder ${{ matrix.directory }} for amd64
         uses: docker://thehiveproject/cortex-neurons-builder:latest
         with:
           driver-opts: image=moby/buildkit:v0.19.0
           args: |
-            --namespace cortexneurons --path responders -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/${{ matrix.arch }} ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
+            --namespace cortexneurons --path responders -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/amd64 ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
+
+  build_responders_arm64:
+    name: Build Responders (arm64)
+    needs: generate-matrix
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        directory: ${{ fromJson(needs.generate-matrix.outputs.responders_matrix).include[*].directory }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Pre-pull builder image (if not already cached)
+        run: docker pull thehiveproject/cortex-neurons-builder:latest
+
+      - name: Build responder ${{ matrix.directory }} for arm64
+        uses: docker://thehiveproject/cortex-neurons-builder:latest
+        with:
+          driver-opts: image=moby/buildkit:v0.19.0
+          args: |
+            --namespace cortexneurons --path responders -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/arm64 ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
 
   build_catalog:
     name: Build Catalog
     runs-on: ubuntu-latest
-    needs: [ build_analyzers, build_responders ]
+    needs: [ build_analyzers_amd64, build_analyzers_arm64, build_responders_amd64, build_responders_arm64 ]
     if: always()
     steps:
       - name: Checkout repository
@@ -156,7 +212,7 @@ jobs:
   build_docs:
     name: Build documentation
     runs-on: ubuntu-latest
-    needs: [ build_analyzers, build_responders ]
+    needs: [ build_analyzers_amd64, build_analyzers_arm64, build_responders_amd64, build_responders_arm64 ]
     if: startsWith(github.ref, 'refs/tags/') && always()
     steps:
       - uses: actions/checkout@v4
@@ -180,8 +236,8 @@ jobs:
 
   notify:
     name: Notify
-    needs: [ build_analyzers, build_responders, build_catalog, build_docs ]
     runs-on: ubuntu-latest
+    needs: [ build_analyzers_amd64, build_analyzers_arm64, build_responders_amd64, build_responders_arm64, build_catalog, build_docs ]
     if: false   # Temporarily disable notifications
     steps:
       - name: Slack notification
