--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,8 +61,8 @@ jobs:
             echo "EOF"
           } >> "$GITHUB_OUTPUT"
 
-  build_analyzers_amd64:
-    name: Build Analyzers (amd64)
+  build_analyzers:
+    name: Build Analyzers (multi-arch)
     needs: generate-matrix
     runs-on: ubuntu-latest
     strategy:
@@ -84,45 +84,15 @@ jobs:
       - name: Pre-pull builder image (if not already cached)
         run: docker pull thehiveproject/cortex-neurons-builder:latest
 
-      - name: Build analyzer ${{ matrix.directory }} for amd64
+      - name: Build analyzer ${{ matrix.directory }} (linux/amd64,linux/arm64)
         uses: docker://thehiveproject/cortex-neurons-builder:latest
         with:
           driver-opts: image=moby/buildkit:v0.19.0
           args: |
-            --namespace cortexneurons --path analyzers -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/amd64 ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
+            --namespace cortexneurons --path analyzers -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/amd64,linux/arm64 ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
 
-  build_analyzers_arm64:
-    name: Build Analyzers (arm64)
-    needs: [ generate-matrix, build_analyzers_amd64 ]
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        directory: ${{ fromJson(needs.generate-matrix.outputs.analyzers_matrix).include[*].directory }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Pre-pull builder image (if not already cached)
-        run: docker pull thehiveproject/cortex-neurons-builder:latest
-
-      - name: Build analyzer ${{ matrix.directory }} for arm64
-        uses: docker://thehiveproject/cortex-neurons-builder:latest
-        with:
-          driver-opts: image=moby/buildkit:v0.19.0
-          args: |
-            --namespace cortexneurons --path analyzers -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/arm64 ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
-
-  build_responders_amd64:
-    name: Build Responders (amd64)
+  build_responders:
+    name: Build Responders (multi-arch)
     needs: generate-matrix
     runs-on: ubuntu-latest
     strategy:
@@ -144,47 +114,18 @@ jobs:
       - name: Pre-pull builder image (if not already cached)
         run: docker pull thehiveproject/cortex-neurons-builder:latest
 
-      - name: Build responder ${{ matrix.directory }} for amd64
+      - name: Build responder ${{ matrix.directory }} (linux/amd64,linux/arm64)
         uses: docker://thehiveproject/cortex-neurons-builder:latest
         with:
           driver-opts: image=moby/buildkit:v0.19.0
           args: |
-            --namespace cortexneurons --path responders -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/amd64 ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
+            --namespace cortexneurons --path responders -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/amd64,linux/arm64 ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
 
-  build_responders_arm64:
-    name: Build Responders (arm64)
-    needs: [ generate-matrix, build_responders_amd64 ]
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        directory: ${{ fromJson(needs.generate-matrix.outputs.responders_matrix).include[*].directory }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Pre-pull builder image (if not already cached)
-        run: docker pull thehiveproject/cortex-neurons-builder:latest
-
-      - name: Build responder ${{ matrix.directory }} for arm64
-        uses: docker://thehiveproject/cortex-neurons-builder:latest
-        with:
-          driver-opts: image=moby/buildkit:v0.19.0
-          args: |
-            --namespace cortexneurons --path responders -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} --platform linux/arm64 ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
 
   build_catalog:
     name: Build Catalog
     runs-on: ubuntu-latest
-    needs: [ build_analyzers_amd64, build_analyzers_arm64, build_responders_amd64, build_responders_arm64 ]
+    needs: [ build_analyzers, build_responders ]
     if: always()
     steps:
       - name: Checkout repository
@@ -216,7 +157,7 @@ jobs:
   build_docs:
     name: Build documentation
     runs-on: ubuntu-latest
-    needs: [ build_analyzers_amd64, build_analyzers_arm64, build_responders_amd64, build_responders_arm64 ]
+    needs: [ build_analyzers, build_responders ]
     if: startsWith(github.ref, 'refs/tags/') && always()
     steps:
       - uses: actions/checkout@v4
@@ -241,7 +182,7 @@ jobs:
   notify:
     name: Notify
     runs-on: ubuntu-latest
-    needs: [ build_analyzers_amd64, build_analyzers_arm64, build_responders_amd64, build_responders_arm64, build_catalog, build_docs ]
+    needs: [ build_analyzers, build_responders, build_catalog, build_docs ]
     if: false   # Temporarily disable notifications
     steps:
       - name: Slack notification
