--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,8 @@ jobs:
         uses: docker/setup-buildx-action@v2
         with:
           driver: docker-container
+          use: true
+          cleanup: true
 
       - name: Pre-pull builder image (if not already cached)
         run: docker pull thehiveproject/cortex-neurons-builder:latest
@@ -114,7 +116,9 @@ jobs:
         uses: docker/setup-buildx-action@v2
         with:
           driver: docker-container
-
+          use: true
+          cleanup: true
+          
       - name: Pre-pull builder image (if not already cached)
         run: docker pull thehiveproject/cortex-neurons-builder:latest
 
