--- a/utils/docker/Dockerfile_template
+++ b/utils/docker/Dockerfile_template
@@ -16,7 +16,8 @@
 
 FROM python:3-alpine
 # Specific alpine setup to support libmagic
-# RUN apk add --no-cache file-dev && rm -rf /var/cache/apk/*\nWORKDIR /worker
+# RUN apk add --no-cache file-dev && rm -rf /var/cache/apk/*
+WORKDIR /worker
 COPY requirements.txt {worker_name}/
 RUN test ! -e {worker_name}/requirements.txt || pip install --no-cache-dir -r {worker_name}/requirements.txt
 COPY . {worker_name}/
