--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,10 +83,11 @@ jobs:
           args: |
             --namespace cortexneurons --path analyzers -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
 
-  build_responders:
+build_responders:
     name: Build Responders
     needs: generate-matrix
     runs-on: ubuntu-latest
+    continue-on-error: true
     strategy:
       matrix: ${{ fromJson(needs.generate-matrix.outputs.responders_matrix) }}
     steps:
@@ -95,15 +96,88 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Pre-pull builder image (if not already cached)
-        run: docker pull thehiveproject/cortex-neurons-builder:latest
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Build responder ${{ matrix.directory }}
-        uses: docker://thehiveproject/cortex-neurons-builder:latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: GHCR Login
+        uses: docker/login-action@v3
         with:
-          driver-opts: image=moby/buildkit:v0.19.0
-          args: |
-            --namespace cortexneurons --path responders -w ${{ matrix.directory }} --registry_dockerhub ${{ secrets.REGISTRY_DOCKERHUB }} ${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && '--stable' || '' }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Convert directory to lowercase
+        id: lowercase_dir
+        run: |
+          lower_dir=$(echo "${{ matrix.directory }}" | tr '[:upper:]' '[:lower:]')
+          echo "lower_dir=${lower_dir}" >> $GITHUB_ENV
+
+      - name: Parse JSON and set environment variables from matrix.path (using jq)
+        id: parse_json
+        run: |
+          json_file="./responders/${{ matrix.path }}"
+          if [ -f "$json_file" ]; then
+            lower_name=$(jq -r '.name | ascii_downcase' "$json_file")
+            version=$(jq -r '.version // empty' "$json_file")
+            description=$(jq -r '.description // empty' "$json_file")
+            command=$(jq -r '.command // empty' "$json_file")
+
+            echo "LOWERCASE_NAME=${lower_name}" >> $GITHUB_ENV
+            echo "VERSION=${version}" >> $GITHUB_ENV
+            echo "DESCRIPTION=${description}" >> $GITHUB_ENV
+            echo "COMMAND=${command}" >> $GITHUB_ENV
+
+            if [[ "$version" == *.* ]]; then
+              version_split=$(echo "$version" | cut -d '.' -f 1)
+              echo "VERSION_SPLIT=${version_split}" >> $GITHUB_ENV
+            else
+              echo "VERSION_SPLIT=${version}" >> $GITHUB_ENV
+            fi
+          else
+            echo "File not found: $json_file"
+            exit 1
+          fi
+
+      - name: Check and create Dockerfile if not present
+        run: |
+          dockerfile_path="responders/${{ matrix.directory }}/Dockerfile"
+          matrix_directory="${{ matrix.directory }}"
+          command_value="${{ env.COMMAND }}"
+
+          if [ ! -f "$dockerfile_path" ]; then
+            echo "Dockerfile not found in $dockerfile_path. Creating one..."
+            echo "FROM python:3-alpine" > "$dockerfile_path"
+            echo "WORKDIR /worker" >> "$dockerfile_path"
+            echo "COPY requirements.txt ${matrix_directory}/" >> "$dockerfile_path"
+            echo "RUN test ! -e ${matrix_directory}/requirements.txt || pip install --no-cache-dir -r ${matrix_directory}/requirements.txt" >> "$dockerfile_path"
+            echo "COPY . ${matrix_directory}/" >> "$dockerfile_path"
+            echo "ENTRYPOINT [\"python\", \"${command_value}\"]" >> "$dockerfile_path"
+          else
+            echo "Dockerfile exists: $dockerfile_path"
+          fi
+
+      - name: Build and push multi-arch image to GHCR
+        uses: docker/build-push-action@v3
+        with:
+          context: responders/${{ matrix.directory }}
+          file: ./responders/${{ matrix.directory }}/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/${{ env.LOWERCASE_NAME }}:${{ (startsWith(github.ref, 'refs/tags') || github.event_name == 'schedule') && env.VERSION || 'devel' }}
+          labels: |
+            schema-version=1.0
+            org.label-schema.build-date=${{ steps.build_date.outputs.date }}
+            org.label-schema.name=${{ env.LOWERCASE_NAME }}
+            org.label-schema.description=${{ env.DESCRIPTION }}
+            org.label-schema.url=https://thehive-project.org
+            org.label-schema.vcs-url=https://github.com/TheHive-Project/Cortex-Analyzers
+            org.label-schema.vcs-ref=${{ github.sha }}
+            org.label-schema.vendor=TheHive Project
+            org.label-schema.version=${{ env.VERSION }}
 
   build_catalog:
     name: Build Catalog
