--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -173,7 +173,8 @@ jobs:
   build_catalog:
     name: Build Catalog
     runs-on: ubuntu-latest
-    needs: [ build_analyzers, build_responders ]
+    needs: [ build_responders ]
+    #needs: [ build_analyzers, build_responders ]
     if: always()
     steps:
       - name: Checkout repository
@@ -206,7 +207,8 @@ jobs:
   build_docs:
     name: Build documentation
     runs-on: ubuntu-latest
-    needs: [ build_analyzers, build_responders ]
+    needs: [ build_responders ]
+    #needs: [ build_analyzers, build_responders ]
     if: startsWith(github.ref, 'refs/tags/') && always()
     steps:
       - uses: actions/checkout@v4
@@ -230,7 +232,8 @@ jobs:
 
   notify:
     name: Notify
-    needs: [ build_analyzers, build_responders, build_catalog, build_docs ]
+    needs: [ build_responders, build_catalog, build_docs ]
+    #needs: [ build_analyzers, build_responders, build_catalog, build_docs ]
     runs-on: ubuntu-latest
     if: false   # Temporarily disable notifications
     steps:
