--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,9 +138,18 @@ jobs:
           matrix_directory="${{ matrix.directory }}"
           command_value="${{ env.COMMAND }}"
 
+          # Add multiple workers separated by spaces
+          special_alpine_workers="PaloAltoNGFW Worker2 Worker3 AnotherWorker"
+
           if [ ! -f "$dockerfile_path" ]; then
             echo "Dockerfile not found in $dockerfile_path. Creating one..."
             echo "FROM python:3-alpine" > "$dockerfile_path"
+
+            # Check if current worker is among special alpine workers
+            if echo "$special_alpine_workers" | grep -qw "$matrix_directory"; then
+              echo "RUN apk add --no-cache file-dev && rm -rf /var/cache/apk/*" >> "$dockerfile_path"
+            fi
+
             echo "WORKDIR /worker" >> "$dockerfile_path"
             echo "COPY requirements.txt ${matrix_directory}/" >> "$dockerfile_path"
             echo "RUN test ! -e ${matrix_directory}/requirements.txt || pip install --no-cache-dir -r ${matrix_directory}/requirements.txt" >> "$dockerfile_path"
