--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -190,7 +190,7 @@ jobs:
           if [[ "${{ github.ref }}" =~ ^refs/tags/ ]] || [ "${{ github.event_name }}" == "schedule" ]; then
             echo "IMAGE_TAG=${{ env.VERSION }}" >> $GITHUB_ENV
           else
-            echo "IMAGE_TAG=${{ github.sha }}" >> $GITHUB_ENV
+            echo "IMAGE_TAG=devel" >> $GITHUB_ENV
           fi        
 
       - name: Build and push multi-arch image to GHCR
@@ -358,7 +358,7 @@ jobs:
           if [[ "${{ github.ref }}" =~ ^refs/tags/ ]] || [ "${{ github.event_name }}" == "schedule" ]; then
             echo "IMAGE_TAG=${{ env.VERSION }}" >> $GITHUB_ENV
           else
-            echo "IMAGE_TAG=${{ github.sha }}" >> $GITHUB_ENV
+            echo "IMAGE_TAG=devel" >> $GITHUB_ENV
           fi
 
       - name: Build and push multi-arch image to GHCR
